--- a/index.qmd
+++ b/index.qmd
@@ -1,70 +1,99 @@
----
-title: Home
----
-
-# Data Stewardship Website
+# Data Stewardship Unit
 
 Welcome to the Data Stewardship Website for Fisheries and Oceans Canada employees in the Pacific Region Science Branch. This website provides support for your data stewardship and management responsibilities.
 
-## Search
 
-<!-- Add search function here -->
 
 ## Perspectives
 
-<div class="perspectives">
-  <a href="perspectives/data-life-cycle.html">
-    <div class="perspective-box">
-      <img src="images/icons/data-life-cycle.png" alt="Data Life Cycle">
-      <h3>Data Life Cycle</h3>
-    </div>
+Browse our resources by your perspective. 
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tile Layout</title>
+    <style>
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            justify-content: center;
+        }
+        .tile {
+            width: 250px;
+            height: 250px;
+            border: 1px solid #ccc;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            cursor: pointer;
+            text-decoration: none;
+            color: inherit;
+            transition: background-color 0.3s, transform 0.3s;
+            border-radius: 15px; 
+        }
+        .tile:hover {
+            background-color: #e0e0e0;
+            transform: scale(1.05);
+        }
+        .image {
+            width: 150px;
+            height: 150px;
+            margin: auto;
+            transition: transform 0.3s;
+        }
+        .tile:hover .image {
+            transform: scale(1.1);
+        }
+        .title {
+            margin-top: auto;
+            padding: 10px;
+            background-color: #f0f0f0;
+            width: 100%;
+            border-radius: 0px 0px 15px 15px; /* Rounded edges */
+        }
+    </style>
+</head>  
+
+
+<div class="container">
+  <a href="perspectives/data-life-cycle.qmd" class="tile">
+    <img src="images/icons/data-life-cycle.svg" alt="Data Life Cycle" class="image">
+    <div class="title">Data Life Cycle</div>
   </a>
-  <a href="perspectives/your-role.html">
-    <div class="perspective-box">
-      <img src="images/icons/your-role.png" alt="Your Role">
-      <h3>Your Role</h3>
-    </div>
+  <a href="perspectives/your-role.qmd" class="tile">
+      <img src="images/icons/your-role.svg" alt="Your Role" class="image">
+      <div class="title">Your Role</div>
   </a>
-  <a href="perspectives/data-domain.html">
-    <div class="perspective-box">
-      <img src="images/icons/data-domain.png" alt="Data Domain">
-      <h3>Data Domain</h3>
-    </div>
+  <a href="perspectives/data-domain.qmd" class="tile">
+      <img src="images/icons/data-domain.svg" alt="Your Domain" class="image">
+      <div class="title">Your Domain</div>
   </a>
-  <a href="perspectives/your-tasks.html">
-    <div class="perspective-box">
-      <img src="images/icons/your-tasks.png" alt="Your Tasks">
-      <h3>Your Tasks</h3>
-    </div>
+  <a href="perspectives/your-tasks.qmd" class="tile">
+      <img src="images/icons/your-tasks.svg" alt="Your Tasks" class="image">
+      <div class="title">Your Tasks</div>
   </a>
-  <a href="perspectives/recommended-tool-stacks.html">
-    <div class="perspective-box">
-      <img src="images/icons/recommended-tool-stacks.png" alt="Recommended Tool Stacks">
-      <h3>Recommended Tool Stacks</h3>
-    </div>
+  <a href="perspectives/recommended-tools.qmd" class="tile">
+      <img src="images/icons/recommended-tool-stacks.svg" alt="Recommended Tools" class="image">
+      <div class="title">Recommended Tools</div>
   </a>
-  <a href="perspectives/national-and-regional-resources.html">
-    <div class="perspective-box">
-      <img src="images/icons/national-and-regional-resources.png" alt="National and Regional Resources">
-      <h3>National and Regional Resources</h3>
-    </div>
-  </a>
-  <a href="perspectives/training-resources.html">
-    <div class="perspective-box">
-      <img src="images/icons/training-resources.png" alt="Training Resources">
-      <h3>Training Resources</h3>
-    </div>
+  <a href="perspectives/national-and-regional-resources.qmd" class="tile">
+      <img src="images/icons/national-and-regional-resources.svg" alt="National and Regional Resources" class="image">
+      <div class="title">National and Regional Resources</div>
   </a>
 </div>
 
-## About
-
-[About the Data Stewardship Unit](about.html)
 
 ## Dashboard
 
-<!-- Add customizable dashboard here -->
+::: {.callout-note}
+The dashboard is in construction ╰(*°▽°*)╯
+:::
 
-## License
+## About this site
 
-This work is licensed under a [CC BY 4.0](LICENSE) license.
+This site was created with [Quarto](https://quarto.org/) by Brett Johnson and Albury C. and is hosted with [Github Pages](https://pages.github.com/). The user perspectives were inspired by the [ELIXIR RDMKit site](https://rdmkit.elixir-europe.org/). Icons from [Font Awesome](https://fontawesome.com/). For issues with the site, please create a Github issue or contact [Albury C.](mailto:catalina.albury@dfo-mpo.gc.ca)
+
+
